# tiny-os

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
boot/: boot.asm  linker.ld
docs/: ARCHITECTURE.md
include/tiny_os/arch/x86_64/: gdt.h  idt.h  pic.h
include/tiny_os/common/: multiboot2.h  string.h  types.h
include/tiny_os/drivers/: ata.h  block_device.h  serial.h  timer.h  vga.h
include/tiny_os/fs/: fat32.h  vfs.h
include/tiny_os/kernel/: kernel.h
include/tiny_os/memory/: heap_allocator.h  page_table.h  physical_allocator.h  virtual_allocator.h
include/tiny_os/process/: context_switch.h  process.h  scheduler.h  thread.h
scripts/: build.sh  create-iso.sh  debug-qemu.sh  run-qemu.sh
src/arch/x86_64/: gdt.asm  gdt.cpp  idt.asm  idt.cpp  pic.cpp
src/common/: multiboot2.cpp  string.cpp
src/drivers/: ata.cpp  serial.cpp  timer.cpp  vga.cpp
src/fs/: fat32.cpp  vfs.cpp
src/kernel/: kernel_main.cpp  new.cpp
src/memory/: heap_allocator.cpp  physical_allocator.cpp  virtual_allocator.cpp
src/process/: context_switch.asm  process.cpp  scheduler.cpp  thread.cpp
